--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
 
       <div>
 
-        <p>For more information or to ask a question, feel free to reach out and
+        <p class="bodytext">For more information or to ask a question, feel free to reach out and
           contact me!</p>
 
-        <ul>
+        <ul class="list">
           <li>Email: jmyers57@ycp.edu</li>
           <li>Mobile: 717.855.4235</li>
           <li>Instagram: @andrew_jam03</li>
@@ -74,11 +74,9 @@
 
         <form action="/action_page.php">
 
-          <input type="text" value="Your Name" placeholder="Your Name"><br>
-          <input type="text" value="Your Email"
-            placeholder="Your Email"><br><br>
-          <textarea rows="10" col="20"
-            placeholder="How can i help you?"></textarea>
+          <input type="text" placeholder="Your Name"><br>
+          <input type="text" placeholder="Your Email"><br><br>
+          <textarea rows="4" cols="150" placeholder="How can I help you?"></textarea>
           <input type="submit" value="Submit">
         </form>
 
