--- a/porfolio_two.html
+++ b/porfolio_two.html
@@ -56,32 +56,32 @@
 
       <div>
 
-        <img src="img/snapshot_one.png">
-        <img src="img/snapshot_two.png">
+        <img src="img/snapshot_one.png" id="snapshot1">
+        <img src="img/snapshot_two.png" id="snapshot2">
 
         <h4>Snapshot Postcard</h4>
         <h5>2023, Digital/Photography</h5>
-        <div><p>Made in Print Production class. Combined elements of photography
-            and digital creation on InDesign. Made use of Pantone colors and
-            over-printing.</p></div>
+        <div><p></p></div>
             <div class="tooltip">
               <img src="img/info_button.png">
-              <span class="tooltiptext">Tooltip text</span>
+              <span class="tooltiptext">Made in Print Production class. Combined elements of photography
+                and digital creation on InDesign. Made use of Pantone colors and
+                over-printing.</span>
             </div>
 
       </div>
 
       <div>
 
-        <img src="img/childhood.jpg">
+        <img src="img/childhood.jpg" id="childhood">
 
         <h4>Childhood</h4>
         <h5>2023, Digital/Photography/Markers</h5>
-        <div><p>Made in Print Production. Combined photograph of hand drawn
-            elements with digital editing in InDesign,</p></div>
+        <div><p></p></div>
             <div class="tooltip">
               <img src="img/info_button.png">
-              <span class="tooltiptext">Tooltip text</span>
+              <span class="tooltiptext">Made in Print Production. Combined photograph of hand drawn
+                elements with digital editing in InDesign.</span>
             </div>
 
       </div>
