--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 
       <div>
 
-        <p>Welcome to the portfolio gallery! Here, you can see an overview of
+        <p class="bodytext">Welcome to the portfolio gallery! Here, you can see an overview of
           some of the work I've created over the last two years. The works are
           broken down into five major categories.</p>
 
