--- a/portfolio_one.html
+++ b/portfolio_one.html
@@ -1,96 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HTML 5 Boilerplate</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <!-- Nav -->
+<body>
 
-    <div id="mySidepanel" class="sidepanel_white">
-      <img src="img/olive_logo.png" id="nav_logo">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="contact.html">Contact</a>
+  <!-- Nav -->
+
+  <div id="mySidepanel" class="sidepanel_white">
+    <img src="img/olive_logo.png" id="nav_logo">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+  </div>
+
+  <!-- Nav End -->
+
+  <!-- Header -->
+
+  <div>
+
+    <div class="sidemenu_cta">
+
+      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+
     </div>
 
-    <!-- Nav End -->
+  </div>
 
-    <!-- Header -->
+  <!-- End Header -->
+
+  <!-- Body -->
+
+  <div class="pageheader">
+    <h2>Digital Design</h2>
+
+    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+        stroke="#9B9D57" stroke-width="7" />
+    </svg>
+  </div>
+
+  <section class="horizontallayout">
 
     <div>
 
-      <div class="sidemenu_cta">
+      <img src="img/gig_poster.jpg" id="gig">
 
-        <button class="openbtn_white" onclick="openNav()"><img
-            src="img/olive_logo.png" class="home_logo"></button>
+      <h4>Gig Poster</h4>
+      <h5>2022, Digital</h5>
+      <div>
+        <p></p>
+      </div>
 
+      <div class="tooltip">
+        <img src="img/info_button.png">
+        <span class="tooltiptext">Made in Elements of Computer Graphics class. Created using
+          Photoshop and Illustrator. Vectorized found imagery used to create
+          texture.</span>
       </div>
 
     </div>
 
-    <!-- End Header -->
+    <div>
 
-    <!-- Body -->
+      <img src="img/game_over.png" id="gameover">
 
-    <div class="pageheader">
-      <h2>Digital Design</h2>
+      <h4>Game Over</h4>
+      <h5>2023, Digital</h5>
+      <div>
+        <p></p>
+      </div>
+      <div class="tooltip">
+        <img src="img/info_button.png">
+        <span class="tooltiptext">Made in Typography I class using typeface made by another
+          student. Only elements used in poster are characters in typeface.
+          Created in Illustrator.</span>
+      </div>
 
-      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
-          stroke="#9B9D57" stroke-width="7" />
-      </svg>
     </div>
 
-    <section class="horizontallayout">
+  </section>
 
-      <div>
+  <!-- Body End -->
 
-        <img src="img/gig_poster.jpg">
+  <script src="js/index.js"></script>
+</body>
 
-        <h4>Gig Poster</h4>
-        <h5>2022, Digital</h5>
-        <div><p>Made in Elements of Computer Graphics class. Created using
-            Photoshop and Illustrator. Vectorized found imagery used to create
-            texture.</p></div>
-        
-        <div class="tooltip">
-          <img src="img/info_button.png">
-          <span class="tooltiptext">Tooltip text</span>
-        </div>
-
-      </div>
-
-      <div>
-
-        <img src="img/game_over.png">
-
-        <h4>Game Over</h4>
-        <h5>2023, Digital</h5>
-        <div><p>Made in Typography I class using typeface made by another
-            student. Only elements used in poster are characters in typeface.
-            Created in Illustrator.</p></div>
-            <div class="tooltip">
-              <img src="img/info_button.png">
-              <span class="tooltiptext">Tooltip text</span>
-            </div>
-
-      </div>
-
-    </section>
-
-    <!-- Body End -->
-
-    <script src="js/index.js"></script>
-  </body>
 </html>
