--- a/portfolio_three.html
+++ b/portfolio_three.html
@@ -54,47 +54,47 @@
 
         <div>
 
-          <img src="img/soldiers.jpeg">
+          <img src="img/soldiers.jpeg" id="soldiers">
 
           <h4>Soldiers</h4>
           <h5>2023, Graphite</h5>
-          <div><p>Made in Drawing II class. Graphite pencil drawing based on
-              still frame from 1951 film, “The Day the Earth Stood
-              Still”.</p></div>
+          <div><p></p></div>
               <div class="tooltip">
                 <img src="img/info_button.png">
-                <span class="tooltiptext">Tooltip text</span>
+                <span class="tooltiptext">Made in Drawing II class. Graphite pencil drawing based on
+                  still frame from 1951 film, “The Day the Earth Stood
+                  Still”.</span>
               </div>
 
         </div>
 
         <div>
 
-          <img src="img/favorite_things.jpg">
+          <img src="img/favorite_things.jpg" id="favs">
 
           <h4>A Few of My Favorite Things</h4>
           <h5>2022, Graphite</h5>
-          <div><p>Still-life drawn using graphite pencil for Drawing I class.
-              Based on photograph of treasured objects.</p></div>
+          <div><p></p></div>
               <div class="tooltip">
                 <img src="img/info_button.png">
-                <span class="tooltiptext">Tooltip text</span>
+                <span class="tooltiptext">Still-life drawn using graphite pencil for Drawing I class.
+                  Based on photograph of treasured objects.</span>
               </div>
 
         </div>
 
         <div>
 
-          <img src="img/bunnies.jpeg">
+          <img src="img/bunnies.jpeg" id="bunnies">
 
           <h4>Clyde and Merlin</h4>
           <h5>2023, Graphite</h5>
-          <div><p>Made for a “draw anything” assignment for Drawing II. Drawn in
-              graphite pencil based on photo of pet rabbits, Clyde and
-              Merlin.</p></div>
+          <div><p></p></div>
               <div class="tooltip">
                 <img src="img/info_button.png">
-                <span class="tooltiptext">Tooltip text</span>
+                <span class="tooltiptext">Made for a “draw anything” assignment for Drawing II. Drawn in
+                  graphite pencil based on photo of pet rabbits, Clyde and
+                  Merlin.</span>
               </div>
 
         </div>
