--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,6 @@
 
       </div>
 
-      <h2>Contact Me</h2>
-
     </div>
 
     <!-- End Header -->
@@ -50,7 +48,7 @@
         xmlns="http://www.w3.org/2000/svg">
         <path
           d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
-          stroke="#9B9D57" stroke-width="7" />
+          stroke="#EEDA92" stroke-width="7" />
       </svg>
     </div>
 
