--- a/porfolio_four.html
+++ b/porfolio_four.html
@@ -55,31 +55,31 @@
 
       <div>
 
-        <img src="img/spray_paint.jpg">
+        <img src="img/spray_paint.jpg" id="spraypaint">
 
         <h4>Untitled</h4>
         <h5>2023, Spray Paint/Charcoal</h5>
-        <div><p>Made in Drawing II class using spray paint. Charcoal was then
-            applied to created outlines.</p></div>
+        <div><p></p></div>
             <div class="tooltip">
               <img src="img/info_button.png">
-              <span class="tooltiptext">Tooltip text</span>
+              <span class="tooltiptext">Made in Drawing II class using spray paint. Charcoal was then
+                applied to created outlines.</span>
             </div>
 
       </div>
 
       <div>
 
-        <img src="img/maritime.jpeg">
+        <img src="img/maritime.jpeg" id="maritime">
 
         <h4>Maritime</h4>
         <h5>2023, Spray Paint/Acrylic Paint</h5>
-        <div><p>Created in Drawing II class to display the principle of Notan.
-            Initial drawing was done using spray paint. Acrylic paint was added
-            for finer details, </p></div>
+        <div><p></p></div>
             <div class="tooltip">
               <img src="img/info_button.png">
-              <span class="tooltiptext">Tooltip text</span>
+              <span class="tooltiptext">Created in Drawing II class to display the principle of Notan.
+                Initial drawing was done using spray paint. Acrylic paint was added
+                for finer details.</span>
             </div>
 
       </div>
