--- a/portfolio.html
+++ b/portfolio.html
@@ -33,18 +33,16 @@
         <button class="openbtn_white" onclick="openNav()"><img
             src="img/olive_logo.png" class="home_logo"></button>
 
-      </div>
-
-      <h2>My Portfolio</h2>
-
-      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
-          stroke="#9B9D57" stroke-width="7" />
-      </svg>
-
-    </div>
+            <div class="pageheader">
+              <h2>My Portfolio</h2>
+        
+              <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+                  stroke="#9B9D57" stroke-width="7" />
+              </svg>
+            </div>
 
     <!-- End Header -->
 
@@ -60,13 +58,16 @@
 
       </div>
 
-      <div>
+      <div class="bodytext">
 
         <h3>Index</h3>
-        <div>
+        <div class="bodytext">
           <a href="portfolio_one.html">Digital Design</a>
+          <br>
           <a href="porfolio_two.html">Multimedia Design</a>
+          <br>
           <a href="portfolio_three.html">Graphite Fine Art</a>
+          <br>
           <a href="porfolio_four.html">Multimedia Fine Art</a>
         </div>
 
